--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-native": "0.64.2"
@@ -22,6 +23,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "react-devtools": "^4.13.5",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
